Ver 1.55:
* Update the FAQ about missing attributes from the user/group edit pages and add a few comments
  in the configuration files
Ver 1.54:
* Add attributes for the sql group tables in admin.conf. Now SQL group support should really work!
Ver 1.53:
* html fixes in show_groups.php3
* When reporting sql errors also print the output of da_sql_error
* When updating ldap user information don't do an update if the new attribute value
  is '-' (default value)
* Comment out Reply-Message in conf/user_edit.attrs since in sql it maps to the same attribute as
  the lock message
Ver 1.52:
* Add Reply-Message in conf/user_edit.attrs so that it appears in the user/group edit pages
* Allow the administrator to specify a group in the New User page. Update lib/sql/create_user.php3 to add
  the user to the specified group
* Call user_info.php3 and defaults.php3 in user_new.php3 after creating a user
* Only run if $login is not NULL in lib/sql/defaults.php3
* In group admin add a button to administer the selected user which will redirect the administrator to the
  corresponding user_admin page
* Add a show_groups.php3 to show all active user groups
Ver 1.51:
* Only call user_info.php3 in user_new.php3 when we are creating a user
* Fix a bug with personal information attributes in user_new.php3
Ver 1.50:
* Add support for groups in SQL. Added several new files and modified a few more.
* Default values in SQL are now extracted from the group membership. Added a lib/sql/defaults.php3 file.
  As a result the default operator is not '=' anymore but whatever we find in the group check and reply tables.
* In lib/sql/user_info.php3 set user_exists in more than one places.
* Add support for the '=*' and '!*' operators
* Added a HELP_WANTED file describing what are the major things missing which people could contribute.
* Updated TODO
* Added a help page for the Session Timeout and Idle Timeout attributes.
* The new group page should only be available if the general library type is sql.