@@ -14,6 +14,7 @@ checkItem	Dialup-Access			none
 checkItem	Max-Daily-Session		Max-Daily-Session
 checkItem	Max-Weekly-Session		Max-Weekly-Session
 checkItem	Login-Time			Login-Time
+chechItem	Expiration			Expiration
 
 replyItem	Service-Type			Service-Type
 replyItem	Framed-Protocol			Framed-Protocol
